Blissify: Advanced Reboot
- Also move over disable on secure lockscreen switch and make it dependant on the advanced reboot switch

Change-Id: Ia2e3b5293566f58a73da8ec07be8f608774d2eb5

--- a/res/xml/buttons_power.xml
+++ b/res/xml/buttons_power.xml
@@ -1,4 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="advanced_reboot"
+        android:title="@string/global_actions_advanced_reboot_title"
+        android:summary="@string/global_actions_advanced_reboot_summary_new"
+        android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_power_menu_disabled"
+        android:title="@string/lockscreen_power_menu_disabled_title"
+        android:summary="@string/lockscreen_power_menu_disabled_summary"
+        android:dependency="advanced_reboot"
+        android:defaultValue="false" />
+
 </PreferenceScreen>
