--- a/res/xml/buttons_navbar.xml
+++ b/res/xml/buttons_navbar.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <SwitchPreference
-            android:key="navigation_bar_show"
-            android:title="@string/navigation_bar_show_title"
-            android:summary="@string/navigation_bar_show_summary"
-            android:persistent="false" />
+    <SwitchPreference
+        android:key="navigation_bar_show"
+        android:title="@string/navigation_bar_show_title"
+        android:summary="@string/navigation_bar_show_summary"
+        android:persistent="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="navigation_bar_menu_arrow_keys"
+        android:title="@string/show_navbar_arrow_keys_title"
+        android:summary="@string/show_navbar_arrow_keys_summary"
+        android:dependency="navigation_bar_show"
+        android:defaultValue="false" />
 
 </PreferenceScreen>
