--- a/res/xml/buttons_navbar.xml
+++ b/res/xml/buttons_navbar.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen 
+       xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreference
         android:key="navigation_bar_show"
@@ -19,5 +21,27 @@
         android:summary="@string/show_navbar_arrow_keys_summary"
         android:dependency="navigation_bar_show"
         android:defaultValue="false" />
+
+    <PreferenceCategory
+        android:key="navigation_burnin"
+        android:title="@string/navigation_burnin_category"/>
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="burn_in_protection"
+            android:title="@string/burn_in_protection_title"
+            android:summary="@string/burn_in_protection_summary"
+            android:dependency="navigation_bar_show"
+            android:defaultValue="true" />
+
+         <com.blissroms.blissify.preference.SystemSettingSeekBarPreference
+            android:key="burn_in_protection_interval"
+            android:title="@string/burn_in_protection_interval_title"
+            android:summary="@string/burn_in_protection_interval_summary"
+            android:max="90"
+            android:min="45"
+            bliss:unitsLeft=""
+            bliss:unitsRight="@string/unit_x1000ms"
+            android:dependency="burn_in_protection"
+            android:persistent="false" />
 
 </PreferenceScreen>
