--- a/res/xml/buttons_navbar.xml
+++ b/res/xml/buttons_navbar.xml
@@ -44,4 +44,13 @@
             android:dependency="burn_in_protection"
             android:persistent="false" />
 
+    <Preference
+            android:title="@string/navbar_tuner_title"
+            android:summary="@string/navbar_tuner_summary"
+            android:dependency="navigation_bar_show">
+        <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.NavBarTunerActivity" />
+    </Preference>
+
 </PreferenceScreen>
