--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -18,6 +18,8 @@
 <resources
     xmlns:tools="http://schemas.android.com/tools">
 
+    <dimen name="alert_dialog_padding_material">20dp</dimen>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
