Allow vibration instead of beep for in-call notifications [2/2]
Change-Id: Icd1f9661987b7eabeb512f782b71de5aa3847e55

--- a/res/xml/interface_callopt.xml
+++ b/res/xml/interface_callopt.xml
@@ -16,4 +16,10 @@
             android:title="@string/incall_vibrate_disconnect_title"
             android:defaultValue="false" />
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="incall_notifications_vibrate"
+            android:title="@string/incall_notifications_vibrate"
+            android:summary="@string/incall_notifications_vibrate_summary"
+            android:defaultValue="false" />
+
 </PreferenceScreen>
