--- a/res/xml/interface_callopt.xml
+++ b/res/xml/interface_callopt.xml
@@ -22,4 +22,11 @@
             android:summary="@string/incall_notifications_vibrate_summary"
             android:defaultValue="false" />
 
+        <ListPreference
+            android:key="flashlight_on_call"
+            android:title="@string/flashlight_on_call_title"
+            android:entries="@array/flashlight_on_call_entries"
+            android:entryValues="@array/flashlight_on_call_values"
+            android:defaultValue="0" />
+
 </PreferenceScreen>
