--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+        <!-- AppOps -->
+        <Preference
+            android:key="app_ops_settings"
+            android:title="@string/app_ops_settings_title">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.settings"
+                android:targetClass="com.android.settings.applications.appops.AppOpsSummary" />
+        </Preference>
+
 </PreferenceScreen>
