--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -16,7 +16,9 @@
 -->
 <resources>
     <!-- Value to pass to callback when restore button is pressed -->
-    <declare-styleable name="ColorPreference">
+    <declare-styleable name="ColorPickerPreference">
         <attr name="defaultColorValue" format="integer" />
+        <attr name="ledPreview" format="boolean" />
+        <attr name="alphaSlider" format="boolean" />
     </declare-styleable>
 </resources>
