--- a/res/xml/interface_batteryled.xml
+++ b/res/xml/interface_batteryled.xml
@@ -1,4 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:bliss="http://schemas.android.com/apk/res-auto">
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="battery_light_enabled"
+        android:title="@string/battery_light_enable"
+        android:defaultValue="false"/>
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="battery_light_pulse"
+        android:title="@string/battery_low_pulse_title"
+        android:dependency="battery_light_enabled"
+        android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="battery_light_only_fully_charged"
+        android:title="@string/battery_light_only_full_charge_title"
+        android:dependency="battery_light_enabled"
+        android:defaultValue="false" />
+
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="battery_light_allow_on_dnd"
+        android:title="@string/notification_light_zen_mode"
+        android:dependency="battery_light_enabled"
+        android:defaultValue="false" />
+
+    <PreferenceCategory
+        android:key="battery_light_cat"
+        android:title="@string/battery_light_cat"
+        android:dependency="battery_light_enabled">
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="low_color"
+            android:title="@string/battery_light_low_color_title"
+            android:persistent="false"
+            ledPreview="true"
+            bliss:defaultColorValue="0xFFFFFF00" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="medium_color"
+            android:title="@string/battery_light_medium_color_title"
+            android:persistent="false"
+            ledPreview="true"
+            bliss:defaultColorValue="0xFFFFFF00" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="full_color"
+            android:title="@string/battery_light_full_color_title"
+            android:persistent="false"
+            ledPreview="true"
+            bliss:defaultColorValue="0xFFFFFF00"/>
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="really_full_color"
+            android:title="@string/battery_light_really_full_color_title"
+            android:persistent="false"
+            ledPreview="true"
+            bliss:defaultColorValue="0xFFFFFF00"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="fast_color_cat"
+        android:title="@string/fast_color_cat_title"
+        android:dependency="battery_light_enabled" >
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="fast_charging_led_enabled"
+            android:title="@string/fast_charging_led_enabled_title"
+            android:summary="@string/fast_charging_led_enabled_summary"
+            android:defaultValue="false" />
+
+        <net.margaritov.preference.colorpicker.ColorPickerPreference
+            android:key="fast_color"
+            android:title="@string/fast_charging_light_color_title"
+            android:summary="@string/fast_charging_light_color_summary"
+            android:persistent="false"
+            ledPreview="true"
+            bliss:defaultColorValue="0xFFFFFF00"
+            android:dependency="fast_charging_led_enabled" />
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
