--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
-        xmlns:android="http://schemas.android.com/apk/res/android">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="lockscreen_media_metadata"
@@ -25,7 +26,7 @@
         android:key="lock_screen_visualizer_custom_color"
         android:title="@string/lockscreen_visualizer_custom_color"
         android:dependency="lock_screen_visualizer_use_custom_color"
-        android:defaultValue="0xffffffff"
+        bliss:defaultColorValue="0xffffffff"
         android:dialogTitle="@string/lockscreen_visualizer_custom_color" />
 
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
