Blissify: OmniSwitch integration
Change-Id: I0f46b7fc36fd27682273a334049d49664649462c

--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+        <ListPreference
+            android:key="navbar_recents_style"
+            android:title="@string/navbar_recents_style_title"
+            android:entries="@array/navbar_recents_style_entries"
+            android:entryValues="@array/navbar_recents_style_values"
+            android:persistent="false"/>
+
 </PreferenceScreen>
