--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -10,4 +10,34 @@
                 android:targetClass="com.android.settings.applications.appops.AppOpsSummary" />
         </Preference>
 
+        <PreferenceCategory
+            android:key="aspect_ratio_category"
+            android:title="@string/aspect_ratio_category_title">
+
+            <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+                android:key="aspect_ratio_apps_enabled"
+                android:title="@string/aspect_ratio_apps_enabled_title"
+                android:summary="@string/aspect_ratio_apps_enabled_summary"
+                android:defaultValue="false" />
+
+            <com.blissroms.blissify.preference.AppMultiSelectListPreference
+                android:dependency="aspect_ratio_apps_enabled"
+                android:key="aspect_ratio_apps_list"
+                android:persistent="false"
+                android:summary="@string/aspect_ratio_apps_list_summary"
+                android:title="@string/aspect_ratio_apps_list_title" />
+
+            <com.blissroms.blissify.preference.ScrollAppsViewPreference
+                android:dependency="aspect_ratio_apps_enabled"
+                android:key="aspect_ratio_apps_list_scroller"
+                android:persistent="false"
+                android:selectable="false" />
+
+            <Preference
+                android:dependency="aspect_ratio_apps_enabled"
+                android:icon="@drawable/ic_info_outline_24dp"
+                android:persistent="false"
+                android:summary="@string/aspect_ratio_apps_info" />
+        </PreferenceCategory>
+
 </PreferenceScreen>
