--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -10,6 +10,20 @@
                 android:targetClass="com.android.settings.applications.appops.AppOpsSummary" />
         </Preference>
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+                android:key="enable_conditions"
+                android:title="@string/dashboard_conditions_title"
+                android:summaryOn="@string/summary_dashboard_conditions_enabled"
+                android:summaryOff="@string/summary_dashboard_conditions_disabled"
+                android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+                android:key="enable_suggestions"
+                android:title="@string/dashboard_suggestions_title"
+                android:summaryOn="@string/summary_dashboard_suggestions_enabled"
+                android:summaryOff="@string/summary_dashboard_suggestions_disabled"
+                android:defaultValue="false" />
+
         <PreferenceCategory
             android:key="aspect_ratio_category"
             android:title="@string/aspect_ratio_category_title">
