--- a/res/xml/qstiles_animation.xml
+++ b/res/xml/qstiles_animation.xml
@@ -1,4 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <ListPreference
+         android:key="qs_tile_animation_style"
+         android:title="@string/qs_tile_animation_style_title"
+         android:entries="@array/qs_tile_animation_style_entries"
+         android:entryValues="@array/qs_tile_animation_style_values"
+         android:persistent="false" />
+
+     <ListPreference
+        android:key="qs_tile_animation_duration"
+        android:title="@string/qs_tile_animation_duration_title"
+        android:entries="@array/qs_tile_animation_duration_entries"
+        android:entryValues="@array/qs_tile_animation_duration_values"
+        android:persistent="false" />
+
 </PreferenceScreen>
