--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -4,6 +4,12 @@
         xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+            android:key="status_bar_locked_on_secure_keyguard"
+            android:title="@string/block_on_secure_keyguard_title"
+            android:summary="@string/block_on_secure_keyguard_summary"
+            android:defaultValue="false"/>
+
+        <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="quick_settings_vibrate"
             android:title="@string/quick_settings_vibrate_title"
             android:summary="@string/quick_settings_vibrate_summary"
