--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -146,6 +146,7 @@
         <item>@string/listview_translate_left</item>
         <item>@string/listview_translate_right</item>
     </string-array>
+
     <string-array name="listview_animation_values">
         <item>0</item>
         <item>1</item>
@@ -171,6 +172,7 @@
         <item>@string/listview_anticipate_overshoot_interpolator</item>
         <item>@string/listview_bounce_interpolator</item>
     </string-array>
+
     <string-array name="listview_interpolator_values">
         <item>0</item>
         <item>1</item>
@@ -188,7 +190,8 @@
         <item>@string/qs_tile_animation_style_flip</item>
         <item>@string/qs_tile_animation_style_rotate</item>
     </string-array>
-     <string-array name="qs_tile_animation_style_values" translatable="false">
+
+    <string-array name="qs_tile_animation_style_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
@@ -200,7 +203,8 @@
         <item>@string/qs_tile_animation_duration_default</item>
         <item>@string/qs_tile_animation_duration_fast</item>
     </string-array>
-     <string-array name="qs_tile_animation_duration_values" translatable="false">
+
+    <string-array name="qs_tile_animation_duration_values" translatable="false">
         <item>2500</item>
         <item>2000</item>
         <item>1500</item>
@@ -217,7 +221,8 @@
         <item>@string/qs_tile_animation_interpolator_anticipateInterpolator</item>
         <item>@string/qs_tile_animation_interpolator_anticipateOvershootInterpolator</item>
     </string-array>
-     <string-array name="qs_tile_animation_interpolator_values" translatable="false">
+
+    <string-array name="qs_tile_animation_interpolator_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
@@ -228,47 +233,70 @@
         <item>7</item>
     </string-array>
 
+    <!-- Quick Pulldown -->
+    <string-array name="quick_pulldown_entries" translatable="false">
+        <item>@string/quick_pulldown_off</item>
+        <item>@string/quick_pulldown_right</item>
+        <item>@string/quick_pulldown_left</item>
+        <item>@string/quick_pulldown_always</item>
+    </string-array>
+
+    <string-array name="quick_pulldown_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
     <!-- Statusbar Clock -->
     <string-array name="status_bar_clock_style_entries" translatable="false">
         <item>@string/status_bar_clock_style_left</item>
         <item>@string/status_bar_clock_style_center</item>
         <item>@string/status_bar_clock_style_right</item>
     </string-array>
+
     <string-array name="status_bar_clock_style_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
+
     <string-array name="status_bar_am_pm_entries" translatable="false">
         <item>@string/status_bar_am_pm_hidden</item>
         <item>@string/status_bar_am_pm_small</item>
         <item>@string/status_bar_am_pm_normal</item>
     </string-array>
+
     <string-array name="status_bar_am_pm_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
+
     <string-array name="clock_date_display_entries">
         <item>@string/clock_date_display_none</item>
         <item>@string/clock_date_display_small</item>
         <item>@string/clock_date_display_normal</item>
     </string-array>
+
     <string-array name="clock_date_display_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
+
     <string-array name="clock_date_style_entries">
         <item>@string/clock_date_style_normal</item>
         <item>@string/clock_date_style_lowercase</item>
         <item>@string/clock_date_style_uppercase</item>
     </string-array>
+
     <string-array name="clock_date_style_values" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
+
     <string-array name="clock_date_format_entries_values">
         <item>dd/MM/yy</item>
         <item>MM/dd/yy</item>
