--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -24,4 +24,11 @@
             bliss:unitsRight="@string/unit_percent"
             android:persistent="false" />
 
+        <ListPreference
+            android:key="quick_pulldown"
+            android:title="@string/quick_pulldown_title"
+            android:entries="@array/quick_pulldown_entries"
+            android:entryValues="@array/quick_pulldown_values"
+            android:persistent="false" />
+
 </PreferenceScreen>
