Add option to disable auto brightness icon in brightness slider [2/2]
Change-Id: I42a020277606a9dcb1e58f89d857484b5f97c08c

--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -16,6 +16,13 @@
             android:defaultValue="false"
             android:dependency="qs_show_brightness_slider" />
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="qs_show_brightness_icon"
+            android:title="@string/brightness_icon_title"
+            android:summary="@string/brightness_icon_summary"
+            android:dependency="qs_show_brightness_slider"
+            android:defaultValue="false"/>
+
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="status_bar_locked_on_secure_keyguard"
             android:title="@string/block_on_secure_keyguard_title"
