--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -24,6 +24,12 @@
             android:defaultValue="false"/>
 
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
+            android:key="qs_show_info_header"
+            android:title="@string/qs_show_info_header_title"
+            android:summary="@string/qs_show_info_header_summary"
+            android:defaultValue="false" />
+
+        <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="status_bar_locked_on_secure_keyguard"
             android:title="@string/block_on_secure_keyguard_title"
             android:summary="@string/block_on_secure_keyguard_summary"
