--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -29,6 +29,12 @@
             android:summary="@string/qs_show_info_header_summary"
             android:defaultValue="false" />
 
+        <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+            android:key="qs_footer_warnings"
+            android:title="@string/qs_footer_warnings_title"
+            android:summary="@string/qs_footer_warnings_summary"
+            android:defaultValue="true" />
+
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="status_bar_locked_on_secure_keyguard"
             android:title="@string/block_on_secure_keyguard_title"
