--- a/res/xml/weather.xml
+++ b/res/xml/weather.xml
@@ -52,6 +52,20 @@
             android:summaryOff="@string/lock_screen_show_weather_summaryOff"
             android:defaultValue="false" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_weather_show_city"
+            android:title="@string/lockscreen_weather_show_city_title"
+            android:summary="@string/lockscreen_weather_show_city_summary"
+            android:dependency="lockscreen_weather_enabled"
+            android:defaultValue="false" />
+
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="lockscreen_weather_show_temp"
+            android:title="@string/lockscreen_weather_show_temp_title"
+            android:summary="@string/lockscreen_weather_show_temp_summary"
+            android:dependency="lockscreen_weather_enabled"
+            android:defaultValue="true" />
+
        <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="lockscreen_weather_style"
             android:title="@string/lock_screen_weather_style_title"
