--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -784,6 +784,7 @@
     <string name="header_weather_summary">Enable notification panel header weather display</string>
     <string name="weather_icon_pack_title">Condition icon pack</string>
     <string name="weather_icon_pack_note">Note\u003a you can install new icon packs from play store by searching for \"Chronus icons\"</string>
+
     <!-- Lockscreen Weather -->
     <string name="lock_screen_weather_category">Weather options</string>
     <string name="lock_screen_weather_category_title">Lockscreen</string>
@@ -796,10 +797,13 @@
     <string name="lock_screen_weather_condition_icon_title">Condition icon display</string>
     <string name="lock_screen_weather_condition_icon_summaryOn">Condition icon is shown on Lockscreen</string>
     <string name="lock_screen_weather_condition_icon_summaryOff">Condition icon is hidden on Lockscreen</string>
-
     <string name="lock_screen_weather_style_title">Weather style</string>
     <string name="lock_screen_weather_style_summaryOff">Omni(with location)</string>
     <string name="lock_screen_weather_style_summaryOn">AOSP(without location)</string>
+    <string name="lockscreen_weather_show_city_title">Show city name</string>
+    <string name="lockscreen_weather_show_city_summary">Show name of current city on left of image</string>
+    <string name="lockscreen_weather_show_temp_title">Show temperature</string>
+    <string name="lockscreen_weather_show_temp_summary">Show current city temperature on right of image</string>
 
     <!-- smart notifications -->
     <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
