Move Statbar tuner to battery options
- Is ugly in there but works for the time being

Change-Id: Ieac5abc19ebd1e60e9d294852a9d3f2ebb2e057f

--- a/res/xml/statusbar_battery.xml
+++ b/res/xml/statusbar_battery.xml
@@ -80,4 +80,12 @@
             bliss:defaultColorValue="0xff99CC00"
             android:dialogTitle="@string/battery_bar_color" />
 
+    <Preference
+            android:title="@string/statusbar_tuner_title"
+            android:summary="@string/statusbar_tuner_summary">
+        <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.systemui"
+                android:targetClass="com.android.systemui.tuner.StatusBarIconsTunerActivity" />
+    </Preference>
+
 </PreferenceScreen>
