Toast Icon switch [2/2]
Change-Id: Ide5eb154e7fb025e00cf1250c2a24466dc95b358

--- a/res/xml/toast_animation.xml
+++ b/res/xml/toast_animation.xml
@@ -17,6 +17,12 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="toast_icon"
+        android:title="@string/toast_icon_title"
+        android:summary="@string/toast_icon_summary"
+        android:defaultValue="true" />
+
     <ListPreference
         android:key="toast_animation"
         android:title="@string/toast_animation_title"
