--- a/res/xml/screenoff_animation.xml
+++ b/res/xml/screenoff_animation.xml
@@ -19,53 +19,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:blissify="http://schemas.android.com/apk/res/com.blissroms.blissify" >
 
-        <SwitchPreference
-            android:key="animation_no_override"
-            android:title="@string/title_animation_no_override"
-            android:summary="@string/summary_animation_no_override" />
-
-        <ListPreference
-            android:key="activity_open"
-            android:title="@string/activity_open_title" />
-
-        <ListPreference
-            android:key="activity_close"
-            android:title="@string/activity_close_title" />
-
-        <ListPreference
-            android:key="task_open"
-            android:title="@string/task_open_title" />
-
-        <ListPreference
-            android:key="task_open_behind"
-            android:title="@string/task_open_behind_title" />
-
-        <ListPreference
-            android:key="task_close"
-            android:title="@string/task_close_title" />
-
-        <ListPreference
-            android:key="task_move_to_front"
-            android:title="@string/task_move_to_front_title" />
-
-        <ListPreference
-            android:key="task_move_to_back"
-            android:title="@string/task_move_to_back_title" />
-
-        <ListPreference
-            android:key="wallpaper_open"
-            android:title="@string/wallpaper_open_title" />
-
-        <ListPreference
-            android:key="wallpaper_close"
-            android:title="@string/wallpaper_close_title" />
-
-        <ListPreference
-            android:key="wallpaper_intra_open"
-            android:title="@string/wallpaper_intra_open_title" />
-
-        <ListPreference
-            android:key="wallpaper_intra_close"
-            android:title="@string/wallpaper_intra_close_title" />
+    <ListPreference
+        android:key="screen_off_animation"
+        android:title="@string/screen_off_animation_title"
+        android:entries="@array/screen_off_animation_entries"
+        android:entryValues="@array/screen_off_animation_values"
+        android:persistent="false"/>
 
 </PreferenceScreen>
