--- a/res/xml/lockscreen_ui.xml
+++ b/res/xml/lockscreen_ui.xml
@@ -41,6 +41,20 @@
         android:summary="@string/lockscreen_weather_summary"
         android:defaultValue="false" />
 
+    <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_weather_show_city"
+        android:title="@string/lockscreen_weather_show_city_title"
+        android:summary="@string/lockscreen_weather_show_city_summary"
+        android:dependency="lockscreen_weather_enabled"
+        android:defaultValue="true" />
+
+     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
+        android:key="lockscreen_weather_show_temp"
+        android:title="@string/lockscreen_weather_show_temp_title"
+        android:summary="@string/lockscreen_weather_show_temp_summary"
+        android:dependency="lockscreen_weather_enabled"
+        android:defaultValue="true" />
+
     <Preference
             android:title="@string/lockscreen_shortcuts_title"
             android:summary="@string/lockscreen_shortcuts_summary">
