[2/2] Blissify: peek timeout and snooze settings
Change-Id: I64989d120dfdec2399c993261086555b4c2e2686

--- a/res/xml/statusbar_headsup.xml
+++ b/res/xml/statusbar_headsup.xml
@@ -2,4 +2,32 @@
 <PreferenceScreen 
         xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <com.blissroms.blissify.preference.SystemSettingIntListPreference
+        android:key="heads_up_timeout"
+        android:title="@string/heads_up_time_out_title"
+        android:entries="@array/heads_up_time_out_entries"
+        android:entryValues="@array/heads_up_time_out_values"
+        android:summary="%s"
+        android:defaultValue="2000" />
+
+    <com.blissroms.blissify.preference.SystemSettingIntListPreference
+        android:key="heads_up_notification_snooze"
+        android:title="@string/heads_up_snooze_title"
+        android:entries="@array/heads_up_snooze_entries"
+        android:entryValues="@array/heads_up_snooze_values"
+        android:defaultValue="0" />
+
+    <PreferenceCategory
+        android:title="@string/log_category">
+
+        <Preference
+            android:key="notification_log"
+            android:title="@string/notification_log_title">
+            <intent android:action="android.intent.action.MAIN"
+                android:targetPackage="com.android.settings"
+                android:targetClass="com.android.settings.notification.NotificationStation" />
+        </Preference>
+
+     </PreferenceCategory>
+
 </PreferenceScreen>
