--- a/res/xml/statusbar_headsup.xml
+++ b/res/xml/statusbar_headsup.xml
@@ -27,6 +27,19 @@
         android:defaultValue="0" />
 
     <PreferenceCategory
+        android:title="@string/heads_up_blacklist_title"
+        android:key="blacklist_applications"
+        android:dependency="heads_up_notifications_enabled" >
+
+         <Preference
+            android:key="add_blacklist_packages"
+            android:icon="@drawable/ic_menu_add"
+            android:title="@string/add_heads_up_package"
+            android:summary="@string/add_heads_up_blacklist_summary" />
+
+     </PreferenceCategory>
+
+    <PreferenceCategory
         android:title="@string/log_category">
 
         <Preference
