--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -19,7 +19,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <dimen name="alert_dialog_padding_material">20dp</dimen>
-    <dimen name="oval_notification_size">26dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
@@ -27,5 +26,21 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="design_navigation_icon_size" tools:override="true">36dp</dimen>
+
+
+    <!-- navbar height -->
+    <integer name="navigation_bar_height_min_percent">65</integer>
+    <integer name="navigation_bar_height_max_percent">135</integer>
+    <integer name="navigation_bar_width_min_percent">65</integer>
+    <integer name="navigation_bar_width_max_percent">135</integer>
+
+    <!-- Shortcut picker -->
+    <dimen name="shortcut_picker_left_padding">70dip</dimen>
+
+    <dimen name="dashboard_category_padding_bottom">8dip</dimen>
+
+    <!-- Color engine -->
+    <dimen name="theme_preview_actionbar_size">15dp</dimen>
+    <dimen name="theme_color_margin_side">20dp</dimen>
 
 </resources>
