--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2017 The BlissRoms Project
-
+<!-- Copyright (C) 2015 Resurrection Remix
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
      You may obtain a copy of the License at
-
           http://www.apache.org/licenses/LICENSE-2.0
-
      Unless required by applicable law or agreed to in writing, software
      distributed under the License is distributed on an "AS IS" BASIS,
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,10 +12,9 @@
 -->
 
 <resources>
+    <item type="id" name="drag_handle" />
 
-    <style name="preference_icon_frame">
-        <item name="android:layout_marginStart">-4dp</item>
-        <item name="android:minWidth">60dp</item>
-    </style>
+    <item name="fab_expand_menu_button" type="id"/>
+    <item name="fab_label" type="id"/>
 
 </resources>
