--- a/res/xml/statusbar_battery.xml
+++ b/res/xml/statusbar_battery.xml
@@ -45,19 +45,19 @@
             android:title="@string/battery_bar_animate_title"
             android:summary="@string/battery_bar_animate_summary" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
+        <com.android.settings.bliss.preference.ColorPickerPreference
             android:key="battery_bar_color"
             android:title="@string/battery_bar_color"
             bliss:defaultColorValue="0xffffffff"
             android:dialogTitle="@string/battery_bar_color" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
+        <com.android.settings.bliss.preference.ColorPickerPreference
             android:key="battery_bar_charging_color"
             android:title="@string/battery_bar_charging_color"
             bliss:defaultColorValue="0xFF00FF00"
             android:dialogTitle="@string/battery_bar_color" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
+        <com.android.settings.bliss.preference.ColorPickerPreference
             android:key="battery_bar_battery_low_color_warning"
             android:title="@string/battery_bar_battery_low_color"
             bliss:defaultColorValue="0xFFFF6600"
@@ -68,13 +68,13 @@
             android:title="@string/battery_bar_use_gradient_color"
             android:summary="@string/battery_bar_gradient_color_summary" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
+        <com.android.settings.bliss.preference.ColorPickerPreference
             android:key="battery_bar_low_color"
             android:title="@string/battery_bar_low_color"
             bliss:defaultColorValue="0xffff4444"
             android:dialogTitle="@string/battery_bar_color" />
 
-        <net.margaritov.preference.colorpicker.ColorPickerPreference
+        <com.android.settings.bliss.preference.ColorPickerPreference
             android:key="battery_bar_high_color"
             android:title="@string/battery_bar_high_color"
             bliss:defaultColorValue="0xff99CC00"
