CF: Add Carbon Gestures [2/2]
* The origininal purpose of this was to use it for Navigation on devices without hardware buttons that dont want to use a Navbar for whatever reasons.
* Now allows emulating all kind of KeyEvents passed to it by CF, as well as being able to capture screenshots and lauch Apps.
* The carbon_gestures_button_values array is fully extendable with all Android KeyEvents, only values >999 are custom handled in FWB.
* Thanks to Alex and Ezio for their help

Adin's edit: REFACTOR ALL THE THINGS

Change-Id: If4dede055ad8736f895417a39e504a880a2f078d

--- a/res/xml/gesture_main.xml
+++ b/res/xml/gesture_main.xml
@@ -8,4 +8,10 @@
         android:key="bliss_logo"
         android:layout="@layout/bliss_logo" />
 
+    <Preference
+        android:title="@string/carbon_gesture_preference_title"
+        android:summary="@string/carbon_gestures_summary"
+        android:icon="@drawable/ic_settings_leds"
+        android:fragment="com.blissroms.blissify.fragments.gestures.CarbonGesturesSettings" />
+
 </PreferenceScreen>
