--- a/res/xml/animations_main.xml
+++ b/res/xml/animations_main.xml
@@ -4,13 +4,13 @@
 	<!-- bliss Logo Header -->
     <Preference 
         android:key="bliss_logo"
-        android:layout="@layout/bliss_logo" />
+        android:layout="@layout/animations_top" />
 
      <PreferenceScreen
                 android:id="@+id/system_animations"
                 android:title="@string/system_animation_title"
                 android:summary="@string/system_animation_summary"
-                android:icon="@drawable/ic_settings_leds"
+                android:icon="@drawable/ic_system"
                 android:fragment="com.blissroms.blissify.fragments.animations.SystemAnimation"
                 />
 
@@ -18,7 +18,7 @@
                 android:id="@+id/qstiles_animation"
                 android:title="@string/qstiles_animation_title"
                 android:summary="@string/qstiles_animation_summary"
-                android:icon="@drawable/ic_settings_leds"
+                android:icon="@drawable/ic_qs_tile"
                 android:fragment="com.blissroms.blissify.fragments.animations.QSTiles"
                 />
 
@@ -26,7 +26,7 @@
                 android:id="@+id/screenoff_animation"
                 android:title="@string/screenoff_animation_title"
                 android:summary="@string/screenoff_animation_summary"
-                android:icon="@drawable/ic_settings_leds"
+                android:icon="@drawable/ic_screen_off"
                 android:fragment="com.blissroms.blissify.fragments.animations.Screenoff"
                 />
 
@@ -34,7 +34,7 @@
                 android:id="@+id/toast_animation"
                 android:title="@string/toast_animation_title"
                 android:summary="@string/toast_animation_summary"
-                android:icon="@drawable/ic_settings_leds"
+                android:icon="@drawable/ic_toast"
                 android:fragment="com.blissroms.blissify.fragments.animations.ToastAnimation"
                 />
 
