--- a/res/xml/interface_batteryled.xml
+++ b/res/xml/interface_batteryled.xml
@@ -2,6 +2,10 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
     <com.blissroms.blissify.preference.SystemSettingSwitchPreference
         android:key="battery_light_enabled"
         android:title="@string/battery_light_enable"
