--- a/res/xml/interface_misc.xml
+++ b/res/xml/interface_misc.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
         <!-- AppOps -->
         <Preference
             android:key="app_ops_settings"
