--- a/res/xml/qs_panel.xml
+++ b/res/xml/qs_panel.xml
@@ -3,6 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
         <com.blissroms.blissify.preference.SecureSettingSwitchPreference
             android:key="qs_show_brightness_slider"
             android:title="@string/brightness_slider_title"
