--- a/res/xml/recents_style.xml
+++ b/res/xml/recents_style.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
         <ListPreference
             android:key="navbar_recents_style"
             android:title="@string/navbar_recents_style_title"
