--- a/res/xml/statusbar_battery.xml
+++ b/res/xml/statusbar_battery.xml
@@ -3,6 +3,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:bliss="http://schemas.android.com/apk/res-auto">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
          <ListPreference
             android:key="status_bar_battery_style"
             android:title="@string/battery_style_title"
