--- a/res/xml/statusbar_clock.xml
+++ b/res/xml/statusbar_clock.xml
@@ -2,6 +2,10 @@
 <PreferenceScreen 
         xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
         <com.blissroms.blissify.preference.SystemSettingSwitchPreference
             android:key="status_bar_clock"
             android:title="@string/status_bar_clock_show"
