--- a/res/xml/system_animation.xml
+++ b/res/xml/system_animation.xml
@@ -19,6 +19,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:blissify="http://schemas.android.com/apk/res/com.blissroms.blissify" >
 
+    <Preference 
+        android:key="bliss_logo"
+        android:layout="@layout/bliss_logo" />
+
         <SwitchPreference
             android:key="animation_no_override"
             android:title="@string/title_animation_no_override"
